turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: type mismatch;
 found   : (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int)))
 required: Array[Array[Array[Int]]]
var rule:Array[Array[Array[Int]]] = (((1,8,0),(1,8,0)),((0,1,0),(0,1,1))) // Change this
                                    ^